add sqlite caching

--- a/env.example
+++ b/env.example
@@ -5,6 +5,32 @@ DATABASE_URL=postgres://username:password@localhost:5432/dataclips_y3k_developme
 # Connection Pool Settings
 DB_MAX_CONNECTIONS=10
 
+# SQLite Cache Configuration (for dataclip result caching)
+# Enable/disable SQLite in-memory caching for dataclip results
+DATACLIP_CACHE_ENABLED=true
+
+# Default cache TTL in seconds (3600 = 1 hour)
+DATACLIP_CACHE_TTL=3600
+
+# Maximum number of cache entries before cleanup
+DATACLIP_CACHE_MAX_ENTRIES=1000
+
+# Cache cleanup interval in seconds (300 = 5 minutes)
+DATACLIP_CACHE_CLEANUP_INTERVAL=300
+
+# Enable cache statistics collection
+DATACLIP_CACHE_STATS_ENABLED=true
+
+# Schema Cache Configuration (for database schema caching)
+# Enable/disable SQLite in-memory caching for schema results
+SCHEMA_CACHE_ENABLED=true
+
+# Default schema cache TTL in seconds (7200 = 2 hours, schemas change less frequently)
+SCHEMA_CACHE_TTL=7200
+
+# Maximum number of schema cache entries (fewer needed as schemas change rarely)
+SCHEMA_CACHE_MAX_ENTRIES=100
+
 # Logging
 LOG_LEVEL=info
 RACK_ENV=development
@@ -14,3 +40,9 @@ RACK_ENV=development
 # DB_MAX_CONNECTIONS=20
 # LOG_LEVEL=warn
 # RACK_ENV=production
+# DATACLIP_CACHE_ENABLED=true
+# DATACLIP_CACHE_TTL=7200
+# DATACLIP_CACHE_MAX_ENTRIES=5000
+# SCHEMA_CACHE_ENABLED=true
+# SCHEMA_CACHE_TTL=14400
+# SCHEMA_CACHE_MAX_ENTRIES=200
