--- a/env.example
+++ b/env.example
@@ -31,6 +31,13 @@ SCHEMA_CACHE_TTL=7200
 # Maximum number of schema cache entries (fewer needed as schemas change rarely)
 SCHEMA_CACHE_MAX_ENTRIES=100
 
+# Heroku API Configuration
+# API token for accessing Heroku Platform API
+# Get your token from: https://dashboard.heroku.com/account
+HEROKU_API_TOKEN=your-heroku-api-token-here
+
+# Note: HEROKU_APP_NAME is automatically provided by Heroku and does not need to be set manually
+
 # Logging
 LOG_LEVEL=info
 RACK_ENV=development
